ms-payment/src/main/java/com/example/mspayment/error/ErrorCodes.java
package com.example.mspayment.error;

public enum ErrorCodes {

    UNEXPECTED_ERROR
}
